fixed text alignment in portfolio images

--- a/wp-content/themes/accesspress-parallax/style.css
+++ b/wp-content/themes/accesspress-parallax/style.css
@@ -1347,14 +1347,13 @@ Portfolio Section
 }
 .portfolio-list h3{
 	position: absolute;
-	width: 100%;
+	width: 282px;
 	padding:15px 10px;
 	bottom: 0;
 	left: 0;
 	color: #FFF;
 	/* background: url(images/portfolio-text-bg.png) repeat-x top left; */
 	font-size: 16px;
-	text-align: center;
 }
 
 .portfolio-list:hover h3{
